fixed names on smaller screens

--- a/Event/popGuilds/popLB.css
+++ b/Event/popGuilds/popLB.css
@@ -123,6 +123,9 @@ body {
     justify-content: center;
     flex-direction: column;
   }
+  .boxSec {
+    justify-content: center;
+  }
   .boxSec.gold {
     justify-content: center;
     margin-right: 0px;
